# nbodysimulation

./: Cargo.toml  README.md  starting_configuration.json
src/: dense_symmetric_matrix.rs  main.rs  object_manager.rs  octree.rs  physics.rs  thread_manager.rs
